CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)

PROJECT(OpenFala)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-extras/")
SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(SFML REQUIRED)
FIND_PACKAGE(ImageMagick COMPONENTS Magick++ REQUIRED)
FIND_PACKAGE(Boost COMPONENTS filesystem program_options REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${SFML_INCLUDE_DIRS} ${ImageMagick_INCLUDE_DIRS})

AUX_SOURCE_DIRECTORY(src/ OpenFala_SRCS)

ADD_DEFINITIONS(-Wall)

SET(CMAKE_BUILD_TYPE Debug)

ADD_EXECUTABLE(OpenFala ${OpenFala_SRCS})
TARGET_LINK_LIBRARIES(OpenFala ${SFML_LIBRARIES} ${Boost_LIBRARIES} ${SFML_LIBRARY} ${ImageMagick_LIBRARIES})
